# mpebia

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CITATION.cff  LICENSE  README.md  data.json  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_198206865c840d43_entropies_py.html  z_198206865c840d43_logging_py.html  z_198206865c840d43_observations_py.html  z_198206865c840d43_output_py.html  z_198206865c840d43_spacing_py.html  z_198206865c840d43_truncated_gaussian_prior_py.html  z_8539e697d2e4b7d4_recycle_metadata_py.html  z_8539e697d2e4b7d4_smart_driver_py.html  z_8c01ae79070bd4f0_cube_model_py.html
scripts/3_information_gain/: plot_entropy_over_variance.ipynb  plot_posteriors_with_information_gain_axis.py
scripts/4_numerical_demonstration/2_porous_medium_model/: poro_geometry_with_arteries.4C.yaml  poro_geometry_without_arteries.4C.yaml  poro_input_with_blood.4C.yaml  poro_input_without_blood.4C.yaml
src/mpebia/: entropies.py  logging.py  observations.py  output.py  spacing.py  truncated_gaussian_prior.py
src/mpebia/electromechanical_model/: cube_model.py  parameters_riig_grid.py  parameters_shared.py
src/mpebia/plotting/: colors.py  positioning.py  rc_params.py  style.py
src/mpebia/porous_medium_model/: parameters_riig_grid.py  parameters_shared.py  plotting.py  (+7 more)
tests/: dummy_executable.py  test_cube_model.py  test_entropies.py  test_logging.py  test_observations.py  test_output.py  test_smart_driver.py  test_spacing.py  test_truncated_normal_prior.py
(+12 files in other folders)
